[tool.poetry]
name = "hikari"
version = "0.1.0"
description = "一个基于fastapi开发、为动漫影视而生的cms系统"
authors = ["MapleLeafTeam sys@mplteam.cn"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
asyncpg = "^0.24.0"
passlib = "^1.7.4"
uvicorn = "^0.22.0"
python-multipart = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
